--- a/index.html
+++ b/index.html
@@ -241,8 +241,12 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="17" role="tabpanel" aria-labelledby="pills-profile-tab">dua</div>
-            <div class="tab-pane fade" id="18" role="tabpanel" aria-labelledby="pills-contact-tab">tiga</div>
+            <div class="tab-pane fade" id="17" role="tabpanel" aria-labelledby="pills-profile-tab">&nbsp; 17</div>
+            <div class="tab-pane fade" id="18" role="tabpanel" aria-labelledby="pills-contact-tab">&nbsp; 18</div>
+            <div class="tab-pane fade" id="19" role="tabpanel" aria-labelledby="pills-profile-tab">&nbsp; 19</div>
+            <div class="tab-pane fade" id="20" role="tabpanel" aria-labelledby="pills-contact-tab">&nbsp; 20</div>
+            <div class="tab-pane fade" id="21" role="tabpanel" aria-labelledby="pills-profile-tab">&nbsp; 21</div>
+            <div class="tab-pane fade" id="22" role="tabpanel" aria-labelledby="pills-profile-tab">&nbsp; 22</div>
           </div>
 
 
